--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -78,6 +78,10 @@
 				GitLab
 			</button>
 
+			<a class="menu-item white" mat-button routerLink="/events">
+				<mat-icon>event</mat-icon> Events
+			</a>
+
 			<a
 				class="menu-item white"
 				href="https://roadmap.tivolicloud.com"
