Fixed time zone issue on metaverse

--- a/frontend/src/app/events/events.component.html
+++ b/frontend/src/app/events/events.component.html
@@ -1,6 +1,6 @@
 <iframe
 	class="calendar"
-	src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=2&amp;bgcolor=%23ffffff&amp;ctz=Atlantic%2FCanary&amp;src=ZW1vYjR1ZnE4MGs2dDZlNTE1bnU5cWV2NWNAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23D81B60&amp;showTitle=0&amp;showNav=0&amp;showDate=1&amp;showPrint=0&amp;showTabs=1&amp;showCalendars=0&amp;showTz=1&amp;mode=MONTH"
+	[src]="sanitizer.bypassSecurityTrustResourceUrl(url)"
 	frameborder="0"
 	scrolling="no"
 ></iframe>
