--- a/frontend/src/app/events/events.component.html
+++ b/frontend/src/app/events/events.component.html
@@ -1,6 +1,55 @@
+<mat-progress-bar
+	mode="indeterminate"
+	style="position: absolute; transition: opacity 200ms;"
+	[style.opacity]="loading ? '1' : '0'"
+></mat-progress-bar>
+<div
+	style="
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		margin: 16px 0;
+	"
+>
+	<div style="display: flex; align-items: center;">
+		<h1 style="margin: 0;">
+			{{ today | date: "MMMM yyyy" }}
+		</h1>
+		<span style="width: 8px;"></span>
+		<h3 style="margin: 0;">({{ timezone }})</h3>
+	</div>
+	<span style="width: 48px;"></span>
+	<button mat-button (click)="refresh()">
+		<mat-icon>refresh</mat-icon>
+		Refresh
+	</button>
+	<button mat-button (click)="onGoogleCalendar()">
+		<mat-icon>events</mat-icon>
+		Google Calendar
+	</button>
+</div>
+<div class="calendar" *ngIf="!googleCalendar && calendar">
+	<div class="week-day" *ngFor="let weekDay of weekDays">{{ weekDay }}</div>
+	<div class="day empty" *ngFor="let _ of offset"></div>
+	<div
+		*ngFor="let day of calendar; let i = index"
+		class="day"
+		[class.finished]="i < currentDate"
+		[class.today]="i == currentDate"
+	>
+		<p class="number" [class.today]="i == currentDate">
+			{{ i + 1 }}
+		</p>
+		<p *ngFor="let event of day">
+			<!-- <span class="circle"></span> -->
+			{{ event.date | date: "HH:mm" }}&nbsp;&nbsp;<b>{{ event.name }}</b>
+		</p>
+	</div>
+</div>
 <iframe
-	class="calendar"
-	[src]="sanitizer.bypassSecurityTrustResourceUrl(url)"
+	*ngIf="googleCalendar"
+	class="google-calendar"
+	[src]="sanitizer.bypassSecurityTrustResourceUrl(googleCalendarUrl)"
 	frameborder="0"
 	scrolling="no"
 ></iframe>
