Fixed hideHeader query to work with events

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-header *ngIf="showHeader"></app-header>
 <router-outlet></router-outlet>
-<app-cookie-consent></app-cookie-consent>
+<app-cookie-consent *ngIf="showHeader"></app-cookie-consent>
