--- a/frontend/src/app/events/events.component.html
+++ b/frontend/src/app/events/events.component.html
@@ -1,6 +1,6 @@
 <mat-progress-bar
 	mode="indeterminate"
-	style="position: absolute; transition: opacity 200ms;"
+	style="transition: opacity 200ms; margin-bottom: -4px;"
 	[style.opacity]="loading ? '1' : '0'"
 ></mat-progress-bar>
 <div
