Updated world cards to match interface

--- a/frontend/src/app/explore/explore.component.html
+++ b/frontend/src/app/explore/explore.component.html
@@ -1,5 +1,5 @@
 <div class="domains">
 	<ng-container *ngFor="let domain of domains">
-		<app-domain-card [domain]="domain"></app-domain-card>
+		<app-world-card [world]="domain"></app-world-card>
 	</ng-container>
 </div>
