--- a/frontend/src/app/ui/world-card/world-card.component.scss
+++ b/frontend/src/app/ui/world-card/world-card.component.scss
@@ -1,15 +1,19 @@
-.domain-card {
+.world-card {
 	display: inline-block;
+	// width: calc(100% - 32px);
 	width: 100%;
+
 	// margin: 0 8px;
 	// margin-bottom: 16px;
 
 	.thumbnail {
-		height: 180px;
+		height: 160px;
 		background-size: cover;
 		background-position: center;
+		background-repeat: no-repeat;
 		position: relative;
 		border-radius: inherit;
+		cursor: pointer;
 
 		> p {
 			position: absolute;
@@ -45,9 +49,48 @@
 		filter: grayscale(1);
 	}
 
-	.mat-card-title,
-	.mat-card-subtitle {
-		margin-left: -16px;
+	.mat-card-header {
+		::ng-deep.mat-card-header-text {
+			margin: 0;
+		}
+
+		.header {
+			width: 100%;
+			display: flex;
+			align-items: center;
+
+			.title {
+				display: flex;
+				font-weight: 500;
+				margin: 0;
+
+				.material-icons {
+					margin-right: 4px;
+				}
+			}
+
+			.subtitle {
+				display: inline-block;
+				color: rgba(0, 0, 0, 0.54);
+				font-size: 14px;
+				margin: 0;
+				margin-left: 8px;
+			}
+
+			.like-button {
+				min-width: 0px;
+				padding: 0 4px;
+				margin-right: -4px;
+				opacity: 0.6;
+				line-height: 16px;
+				font-size: 1em;
+
+				&.active {
+					color: #f44336;
+					opacity: 1;
+				}
+			}
+		}
 	}
 
 	.mat-card-actions {
@@ -73,7 +116,8 @@
 	}
 
 	.mat-card-content > div {
-		height: 1em;
+		margin-top: 8px;
+		height: 1.4em;
 		// height: 2.4em;
 		overflow: hidden;
 	}
