--- a/frontend/src/app/user/domains/domains.component.scss
+++ b/frontend/src/app/user/domains/domains.component.scss
@@ -1,11 +1,11 @@
-// app-domain-card {
+// app-world-card {
 // 	width: calc(100% / 6);
 // 	display: inline-block;
 // }
 
 // @for $i from 12 through 2 {
 // 	@media screen and (max-width: 275px * $i) {
-// 		app-domain-card {
+// 		app-world-card {
 // 			width: 100% / ($i - 1);
 // 		}
 // 	}
