Added open-source and inclusive to the top of the website

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -35,7 +35,42 @@
 </div>
 <div class="info">
 	<div class="container">
-		<div class="row align-items center">
+		<div class="row" style="padding-bottom: 0;">
+			<h1 class="col" style="text-align: center;">
+				<a href="https://git.tivolicloud.com" style="color: inherit;">
+					<!-- <mat-icon style="font-size: 96px; width: 96px; height: 96px;">
+						code
+					</mat-icon> -->
+					<img
+						src="/assets/icons/gitlab.svg"
+						style="font-size: 96px; width: 96px; height: 96px;"
+					/>
+					<br />
+					Open-source
+					<br />
+					<p style="font-size: 0.7em; margin: 0; margin-top: 12px;">
+						Free software under the
+						<br />
+						GNU AGPLv3 license
+					</p>
+				</a>
+			</h1>
+			<h1 class="col" style="text-align: center;">
+				<img
+					src="/assets/icons/uber-pride.png"
+					style="font-size: 96px; width: 96px; height: 96px;"
+				/>
+				<br />
+				Inclusive
+				<br />
+				<p style="font-size: 0.7em; margin: 0; margin-top: 12px;">
+					We want to create a safe
+					<br />
+					environment for everyone
+				</p>
+			</h1>
+		</div>
+		<div class="row" style="padding-top: 32px;">
 			<h1>
 				We are building a friendly, creative and inclusive metaverse for
 				everyone. Hang out with friends from all over the world, host or
@@ -206,7 +241,7 @@
 		<div class="row align-items-center">
 			<div class="col-md-7">
 				<h1 class="icon-title">
-					<mat-icon>code</mat-icon> Free and open source
+					<mat-icon>code</mat-icon> Free and open-source
 				</h1>
 				<h2>
 					Under the AGPLv3 license, we are
