Removed roadmap buttons

--- a/frontend/src/app/header/download/download.component.html
+++ b/frontend/src/app/header/download/download.component.html
@@ -24,7 +24,10 @@
 	The early access version of Tivoli is unfinished and doesn't represent
 	<br />
 	the final product. Expect issues which can be
-	<a href="https://roadmap.tivolicloud.com" target="_blank">
+	<a
+		href="https://git.tivolicloud.com/tivolicloud/interface/-/issues"
+		target="_blank"
+	>
 		reported here
 	</a>
 </p>
