Updated download component

--- a/frontend/src/app/header/download/download.component.html
+++ b/frontend/src/app/header/download/download.component.html
@@ -106,7 +106,9 @@
 						"
 					>
 						.deb (~630 MB)
-						<span style="opacity: 0.5;">&ndash; dpkg -i</span>
+						<span style="opacity: 0.5;">
+							&ndash; apt install ./tivoli.deb
+						</span>
 					</a>
 					<a
 						mat-menu-item
@@ -118,7 +120,9 @@
 						"
 					>
 						.pacman (~630 MB)
-						<span style="opacity: 0.5;">&ndash; pacman -U</span>
+						<span style="opacity: 0.5;">
+							&ndash; pacman -U tivoli.pacman
+						</span>
 					</a>
 				</mat-menu>
 			</mat-card>
