--- a/frontend/src/app/header/download/download.component.html
+++ b/frontend/src/app/header/download/download.component.html
@@ -91,7 +91,7 @@
 				>
 					Download for Linux
 				</button>
-				<p><b>Glibc 2.28</b> or higher</p>
+				<p><b>Ubuntu 18.04 (glibc 2.27)</b> or higher</p>
 				<mat-menu #linuxMenu="matMenu">
 					<a mat-menu-item [href]="release.platforms.linux.url">
 						.AppImage ({{ release.platforms.linux.size }})
