--- a/frontend/src/app/home/home.component.scss
+++ b/frontend/src/app/home/home.component.scss
@@ -84,6 +84,24 @@ $bgDim: 0.2;
 				}
 			}
 		}
+
+		.stats {
+			width: 416px;
+			height: 48px;
+			margin: auto;
+			position: absolute;
+			bottom: -16px;
+			left: 0;
+			right: 0;
+
+			display: flex;
+			align-items: center;
+			justify-content: center;
+
+			border-radius: 32px 32px 0 0;
+			background-color: #fff;
+			color: #000;
+		}
 	}
 }
 
