--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -89,12 +89,14 @@
 			</h1>
 		</div>
 		<div class="row" style="padding-top: 32px;">
-			<h1>
-				We are building a friendly, creative and inclusive metaverse for
-				everyone. Hang out with friends from all over the world, host or
-				attend events big or small, build and experience magical worlds.
-				The only limit is your imagination!
-			</h1>
+			<div class="col">
+				<h1>
+					We are building a friendly, creative and inclusive metaverse
+					for everyone. Hang out with friends from all over the world,
+					host or attend events big or small, build and experience
+					magical worlds. The only limit is your imagination!
+				</h1>
+			</div>
 		</div>
 	</div>
 </div>
