Added "Open in editor" to files with monaco editor

--- a/frontend/src/app/user/files/folder-view/folder-view.component.html
+++ b/frontend/src/app/user/files/folder-view/folder-view.component.html
@@ -87,6 +87,14 @@
 				Copied!
 			</ng-container>
 		</button>
+		<button
+			mat-button
+			*ngIf="contextMenu.file.type == 'code'"
+			(click)="onContextMenuEditFile()"
+		>
+			<mat-icon>launch</mat-icon>
+			Open in editor
+		</button>
 		<mat-divider></mat-divider>
 	</ng-container>
 	<button mat-button (click)="onContextMenuMove()">
