Updated UI to Save & Close

--- a/frontend/src/app/user/files/editor/editor.component.html
+++ b/frontend/src/app/user/files/editor/editor.component.html
@@ -23,7 +23,7 @@
 		<div style="margin: 0 4px;"></div>
 		<button mat-flat-button color="primary" (click)="onSave()">
 			<mat-icon>save</mat-icon>
-			Save file
+			Save & Close
 		</button>
 	</div>
 </div>
