Renamed http:// to https://

--- a/frontend/src/app/user/files/folder-view/folder-view.component.html
+++ b/frontend/src/app/user/files/folder-view/folder-view.component.html
@@ -97,7 +97,7 @@
 			>
 				<mat-icon>link</mat-icon>
 				<ng-container *ngIf="!contextMenu.httpUrlCopied">
-					http://
+					https://
 				</ng-container>
 				<ng-container *ngIf="contextMenu.httpUrlCopied">
 					Copied!
