Added (permanent) to username placeholders when signing up

--- a/frontend/src/app/header/sign-in/sign-in.component.html
+++ b/frontend/src/app/header/sign-in/sign-in.component.html
@@ -168,7 +168,7 @@
 			<mat-form-field style="width: 100%;">
 				<input
 					matInput
-					placeholder="Username"
+					placeholder="Username (permanent)"
 					required
 					formControlName="username"
 				/>
@@ -253,7 +253,7 @@
 			<mat-form-field style="width: 100%;">
 				<input
 					matInput
-					placeholder="Username"
+					placeholder="Username (permanent)"
 					required
 					formControlName="username"
 				/>
