Improved GitLab sso by directing from the server and using auth cookie instead

--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -64,11 +64,7 @@
 				Discord
 			</a>
 
-			<button
-				class="menu-item white"
-				mat-button
-				routerLink="/auth/sso/gitlab"
-			>
+			<a class="menu-item white" href="/auth/sso/gitlab" mat-button>
 				<img
 					class="material-icons"
 					src="/assets/icons/gitlab.svg"
@@ -76,7 +72,7 @@
 					style="height: 22px;"
 				/>
 				GitLab
-			</button>
+			</a>
 
 			<a class="menu-item white" mat-button routerLink="/events">
 				<mat-icon>event</mat-icon> Events
