Added temporary onboarding to home page

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -49,6 +49,47 @@
 				}}
 			</h3>
 		</div>
+		<div class="onboarding">
+			<h2>Onboarding instructions</h2>
+			<ol>
+				<li>
+					Click on
+					<b
+						><a (click)="openSignIn()" style="cursor: pointer;"
+							>Sign In</a
+						></b
+					>
+					to create a Tivoli Cloud VR account.
+				</li>
+				<li>
+					Click on <b><a routerLink="/download">Download</a></b> to
+					get the installer for your OS.
+				</li>
+				<li>
+					Run the installer and click on <b>run anyway</b> if your OS'
+					defense system flags Tivoli.
+				</li>
+				<li>
+					Run our launcher <b>Tivoli Cloud VR.exe</b> and click on
+					<b>Launch Tivoli client</b>.
+				</li>
+			</ol>
+			<br />
+			<h2>Minimum system requirements</h2>
+			<ul>
+				<li><b>CPU:</b> Intel i5 equivalent or greater</li>
+				<li><b>RAM:</b> 8GB+</li>
+				<li><b>GPU:</b> NVIDIA GTX 970 equivalent or greater</li>
+				<li>
+					<b>Internet Connection:</b><br />20 Mbps download / 5 Mbps
+					upload
+				</li>
+				<li>
+					<b>VR (optional):</b> any headset compatible with SteamVR or
+					Oculus on PC
+				</li>
+			</ul>
+		</div>
 	</div>
 </div>
 <div class="info">
