--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -49,7 +49,7 @@
 				}}
 			</h3>
 		</div>
-		<div class="onboarding">
+		<!-- <div class="onboarding">
 			<h2>Onboarding instructions</h2>
 			<ol>
 				<li>
@@ -89,7 +89,7 @@
 					Oculus on PC
 				</li>
 			</ul>
-		</div>
+		</div> -->
 	</div>
 </div>
 <div class="info">
