Fixed padding issue on file uploader

--- a/frontend/src/app/user/files/upload/upload.component.html
+++ b/frontend/src/app/user/files/upload/upload.component.html
@@ -57,6 +57,7 @@
 			class="icon"
 			[value]="upload.progress"
 			diameter="24"
+			style="padding: 0 16px;"
 		></mat-progress-spinner>
 		<mat-icon
 			*ngIf="uploading && upload.state == 'uploaded'"
